# openai

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  open_ai.rs
src/llms/: mod.rs  open_ai.rs
tests/: llm_tests.rs
